# Learn-Github

./: .gitignore  README copy.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
